@@ -5,23 +5,26 @@ AUX 0.2.13-fix-pysideuic-test-and-install.patch 1117 SHA256 f03cfa89cdef59b5e947
 DIST pyside-tools-0.2.14.tar.bz2 76575 SHA256 cbd5d2ecf872434442f095766d5abf29733e3cc474da3e2e679e93b6bc0bb600 SHA512 8da71d0ddf03d5bd974d944a9282fced4602458f4d31dcd119f085ae7555e80518b30def97c73545d5ce3df475567a14ba14b12687b24e822747711bc69c9d59 WHIRLPOOL 33eccfdb8ad582973e80fb98b91b1af818b0eeb6de832c168e9293cf36db41bd08aca8dca1a1e674253b0e57bdc0cce800da5c39cbe8dcad2341b38d23746435
 DIST pyside-tools-0.2.15.tar.gz 78989 SHA256 8a7fe786b19c5b2b4380aff0a9590b3129fad4a0f6f3df1f39593d79b01a9f74 SHA512 7cee288b733e5f83a01683d7fc8f1017c044e46dbb02489c5e763e37db4e24f319ffd593e001ee6ca5a21a34cf1a6009ab1d4c9e4102c60693992b6f2f7c8991 WHIRLPOOL 23d7a325f548cd1d95b91c40d5c2ccbdd70a25328948f93b5232bf8d1177674899bfdd51161873c34be5245d20c4d202a3eed29ce7fa10399cabad9e84b2e698
 EBUILD pyside-tools-0.2.14.ebuild 2204 SHA256 a2e88a90173668c04d4c53ef76c28caa0eb67469ae3dc9700603a9553a990470 SHA512 cbb00a1a003af80cd36327d723d33bbc5c0bbb0fd6688b57edc9865774915cd2f563fc23936eb0097e335e8b3a85d5df91783f451b03a339e4c0a513605aa00c WHIRLPOOL 477105e0e8f3a72af32cb7e54b5d6a3818917e505191adc4aab5f9014add9da8677b03cd1ba3b3ff3106ef8b0c24fd4f2acf8316d2d5ff0c7d044b4a070434dc
+EBUILD pyside-tools-0.2.15-r1.ebuild 1942 SHA256 dfeeaa311a0abae5efbd29b59d9218eedbb6ad1f62e14380a32d3ec472b946ce SHA512 7b0a872e9abbbe7e73f5f1e3bcac86dbf9f57cf8898839285bbc9028da5af8361f6e4d3b9e1379165d77b5d07a42f62d92f0a8e37d6c84b60f3bfb361df4c54c WHIRLPOOL ea4b04447857d1f95d37dc92acc7b5e45f426c3f7e22a391ee78d388d975d7ce61ff8b717e8122e3f996ff15205605aca01c307f10b4e7552b181128cd85c583
 EBUILD pyside-tools-0.2.15.ebuild 2233 SHA256 3bb0482c432852bfe5a332d09739cf3160a20a177f5c982433c7d5f7bf20af1f SHA512 6ed070614507e54e95ef711704d23199ffac12486f7ef79e6e8a56b02e81ea701c4959c2e18946467a6c582da5763bd798d3babac1ef466f09c0002d18d4fb0f WHIRLPOOL 3f195223e01faaf29e502cf509861cc2407f0e76cfd2acd1be06384c5aba3fa5b5ab7815ede6a8d737e7ab8d766bb43754395838a0f670582754df2d8a225fc8
-MISC ChangeLog 4887 SHA256 d952c664f08f289f9b45eba19009f6971eb53a6dbb565d3bf871c0436ff26459 SHA512 5b0c14ea2819c8e4be8ddc19cbbf56a9c51b95d26a99de6d9d7b0ed478bf4cec5e9eff3726becb38dcba9226af80fd3b636b9af77ab6b432a6b25f31cbe78933 WHIRLPOOL 1fdbe0168a01c850e0f4d9d0c20ab3e70b8ff408a2168e5f54e0cc052ca353cdb1f9fb34361de0bc6c08babb2f4d76a8c304085561b740b421f1c084c291c9d7
+MISC ChangeLog 5108 SHA256 2b89ad525b448bb5819c84caf5b25b7e27aa5ef8cedb953fd630f6dfd0e90c42 SHA512 f64f842fabeeb5946dd35f65cab19637219e21fd9c5fd5780f392f103e494b9b0aafc324e0957bd9733e67a562622a0247741a4b0f39c5458fb0ace3358e61d6 WHIRLPOOL a2f46e35cd9f575dada4d4392bc9fc48e3c8efdf220108dce9340312531a50eab9045f35fc985be679140b035ddaf55ac45942491e083ca677a2437d2e8b8a26
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJSu43ZAAoJENXLsxwXqFxyCywP/2XKxyYLJHmJc3GDNfCexf2T
-3UNM6dp6B1oi2iP63gtdlKI5JSA0PQuOss3ODpjgc1AEGhpooeUOEtaeUeHBrXQe
-IliWx+Ag5otpNDG6QYpQCyq4NnEygZ0ruTmqhpHt2S99edC9DtIt08/r6SVyAzRo
-xEy764gZVyxKpYqRhn1ZoJFYD0UxtMYfMSlTf0XuQudkydyELcF7rq3poBvGNoOe
-shM7/lHCJBb2HrRI08odD49MXzjeDRRgYh2xTsJBlxoa1mzPkWCJ3Il5Ib2lrMKK
-St0T0e5/5qv5KukM5hQrjdOvgpxOYKkWS+IQFlWD7VwQW4b00aG8NwhsxJ6lqI7f
-/br+zJK6ab1nVokCjS9kt4pjfs9I00na1AzSwTHiczbVSpB+k44fuv7bgeJFMBk3
-QfKx4uyFuNsEsAFVX+iIOul29RMBvBit5pV86v3qFspSuiEqfyO8/nr9KsF6khvp
-jVuKaqInqPbM7yo10VVHAR2rfcNSW52q5ICrFJM0SAbFlkuDOjhgxFgcympqm1XD
-n6wnVbQHKsfzKT9fAUUuH+tm6W0B0M9ZTn5BDoLBcIdTUyiwgeRSzZ6wUWvfgl6D
-mo+xaZLnJj1bFVnnO3FeCV+3MJe0YTv5cqfvDv83RGHGGpJV2UpshVtgeCLkTV84
-zJsWFfnfgq9VhQ3OGky/
-=ilLO
+iQJ8BAEBCABmBQJVD+bkXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOaUsP/AxXyb+LWIsov3XyD/fE61rv
+CtchaDYU7R89sm0wwNVlXOpaO2iU1+64vyUiS8jSB/LhRuVtfzb1jNV+DCLXGNDF
+RpKUcA063i6wHfVGV0BUwm/gEL/Txk7UXNmSebpDcnv2gZAuJ5YRAL5fCcfD0IOq
+l70HH14CRqqoDkc4K0IncfLGXQ70XOb4XN/ZZLOt1yK41Owl3eiUsPnFBhCPLQwR
+A+uqxca1EkJSRR42oCe234Ygzz+3v49O/bd2cOpllX4kxLdyggmdhRXvviHG0nv6
+rgxDb7VtsnJNRp37eJjnB/QX3IipYAxzJdhm1L0wV7aCLhPb12sreneV5QNNSmLU
+mv1/zdLNknkSVzWugbKi3SCwJ4k2xpovSvb7BsXPhSHXPypXZVtluWQG/eo+dpxk
+xOnQKldqe/5kQ9zhOAQrf/wdn+2aulJbQ/LR9BMYmHD6fRS8fzxeEn3SMIlQ0NuF
+pEYfcyqmpeViVa+NjigYi5Scnh1RaMFyM8EEJZQ97wlKI/RnWEyZKnXdSIPBqMkF
+6uHaYZ5hHqVhObIXZaE4TeDQNhWA2GGL3URIXHRZBsx3JS6iwr+twreocxVACspl
+jiQM1loeg6u9j1WO1UJJfuHbWVH/iV1TYBgFRJTC7fD/RZ+Z5oItmxEmJMNcyS+M
+Lbgd5t3ueRpqm88LwEYc
+=A9jg
 -----END PGP SIGNATURE-----
